<resources>
    <string name="app_name">UrbanFood</string>
    <string name="titleReservas">Urban Food</string>
    <string name="reservar">RESERVAR</string>
    <string name="tamano_del_grupo">Tamaño del grupo.</string>
    <string name="historial">MIS RESERVACIONES</string>
    <string name="postres">postres</string>
    <string name="bebidas">bebidas</string>
    <string name="entradas">entradas</string>
    <string name="platos_principales">Platos principales</string>
    <string name="men">MENÚ</string>
    <string name="sobre_nosotros">SOBRE NOSOTROS</string>
    <string name="todo">TODO</string>
    <string name="hecho">HECHO</string>
    <string name="seleccione_la_fecha">Seleccione la fecha.</string>
    <string name="seleccione_la_hora">Seleccione la hora.</string>
    <string name="resumen">Resumen.</string>
    <string name="llamar">Llamar</string>
    <string name="tituloRegistrarse">Registrarse</string>
    <string name="nombresHint">Nombres</string>
    <string name="apellidosHint">Apellidos</string>
    <string name="telefonoHint">Teléfono</string>
    <string name="usuarioHint">Nombre de usuario</string>
    <string name="claveHint">Contraseña</string>
    <string name="btnRegistrarme">Registrarme</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="tituloRegistrar">Registrar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnSalir">SALIR</string>
    <string name="btnIngresar">ingresar</string>
    <string name="btnRegistrate">Regístrate</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="titulobebidas">BEBIDAS</string>
    <string name="tituloentradas">ENTRADAS</string>
    <string name="titulopostres">POSTRES</string>
    <string name="tituloplatos_principales">PLATOS PRINCIPALES</string>
    <string name="sobre_nosotrosTitle">Sobre Nosotros</string>
    <string name="sn1">Urban Food es un restaurante que busca ser parte de tus mejores momentos, el mejor ambiente y belleza colonial y delicioso sabor de Santa Ana.</string>
    <string name="sn2">Estamos ubicados en el Km. 75 1/2 carretera a Chalchuapa, Ciudad Real, Chalchuapa, El Salvador</string>
    <string name="btnUbicacion">Ver ubicación</string>
    <string name="LoginTitle">Iniciar sesión</string>
    <string name="btnAgregar_usuario">Agregar usuario</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnBuscar">Buscar</string>
    <string name="tituloUsuario">USUARIO</string>
    <string name="txtid">ID</string>
    <string name="txtUsuarioTable">Usuario</string>
    <string name="txttipotable">Tipo</string>
    <string name="ltimas_reservasTitle">ÚLTIMAS RESERVAS</string>
    <string name="id">ID</string>
    <string name="ultimas_reservas">Últimas reservas</string>
    <string name="bannerDesc">banner</string>
    <string name="iconuserDesc">iconuser</string>
    <string name="imgDesc">img</string>
    <string name="icon">icon</string>
    <string name="img">img</string>
    <string name="entradasimg">entradas</string>
    <string name="postresimg">postres</string>
    <string name="principal">principal</string>
    <string name="Toast_busqueda">Por favor, rellene el campo de búsqueda</string>
    <string name="noHayCoincidencias">No hay coincidencias</string>
    <string name="ToastErrorServidor">Error en el servidor</string>
    <string name="ToastRelleneTodos">Por favor, rellene todos los campos</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="tab1">Inicio</string>
    <string name="tab2">Reservas</string>
    <string name="tab3">Historial</string>
    <string name="ToastPrimeroSesion">Primero inicia sesión</string>
    <string name="ToastReservaOK">Reserva realizada correctamente</string>
    <string name="ToastErrorJson">Error en el JSON: </string>
    <string name="ToastSesionFin">Sesión finalizada</string>
    <string name="registradoOk">Registrado correctamente</string>
    <string name="UsuarioYaExiste">El nombre de usuario ya existe</string>
</resources>