<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".SobreNosotros">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0A6FB3"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon"
            tools:ignore="ImageContrastCheck">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/titleReservas"
            android:textColor="@color/white"
            android:textSize="30sp"></TextView>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/sobre_nosotrosTitle"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sn1"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sn2"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#494959"
            android:drawableLeft="@drawable/ubicacion"
            android:onClick="IrGoogleMaps"
            android:text="@string/btnUbicacion"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/sobrenosotros" />
    </LinearLayout>

</LinearLayout>